--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,12 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 LinkingTo:
     Rcpp,
-    RcppEigen
+    RcppEigen,
+    testthat
 Imports: 
     Rcpp,
     RcppEigen
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    xml2
 Config/testthat/edition: 3
