export update single

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(get_groups)
 export(read_h5_file)
 export(simulate_traits)
 export(update_mask)
+export(update_single_group)
 export(write_h5_dataset)
 import(Rcpp)
 import(RcppEigen)
