--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(fame)
 export(fame_traits)
 export(get_groups)
 export(read_h5_file)
+export(simulate_a_trait)
 export(simulate_traits)
 export(update_mask)
 export(update_single_group)
