--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ import(Rcpp)
 import(RcppEigen)
 import(dplyr)
 import(genio)
+importFrom(progress,progress_bar)
 importFrom(stats,pnorm)
 importFrom(tidyr,pivot_longer)
 importFrom(utils,write.table)
