--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,9 @@ Imports:
     RcppEigen,
     tidyr
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0),
     xml2
 Config/testthat/edition: 3
+VignetteBuilder: knitr
