--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,30 @@
 url: ~
+
 template:
   bootstrap: 5
+  light-switch: true
+  bslib:
+    primary: "#0054AD"
+    border-radius: 0.5rem
+    btn-border-radius: 0.25rem
+    danger: "#A6081A"
+  includes:
+    in_header:
+      <script defer data-domain="pkgdown.r-lib.org,all.tidyverse.org" src="https://plausible.io/js/plausible.js"></script>
 
+reference:
+- title: "Multimodal Marginal Epistasis Analysis"
+  desc: >
+    Functions for the marginal epistasis analysis.
+  contents:
+  - mme
+- title: "Simulate Quantitative Traits"
+  desc: >
+    Functions for simulating quantitative traits with pairwise epistasis.
+  contents:
+  - simulate_traits
+- title: "Utility Functions"
+  desc: >
+    Utility functions.
+  contents:
+  - approximate_memory_requirements
