--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ import(Rcpp)
 import(RcppEigen)
 import(dplyr)
 import(genio)
+import(mvMAPIT)
 importFrom(stats,pnorm)
 importFrom(tidyr,pivot_longer)
+importFrom(utils,read.delim)
 importFrom(utils,write.table)
 useDynLib(mmer)
