--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,8 +31,7 @@ Suggests:
     ggplot2,
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0),
-    xml2
+    testthat (>= 3.0.0)
 Config/testthat/edition: 3
 SystemRequirements: HDF5 (>= 1.14.5)
 VignetteBuilder: knitr
