--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -46,6 +46,9 @@ jobs:
           else
             sudo apt-get update
             sudo apt-get install -y libomp-dev libhdf5-dev
+            echo "CXXFLAGS=-fopenmp -I/usr/include/hdf5/serial" >> ~/.R/Makevars
+            echo "LDFLAGS=-L/usr/lib/x86_64-linux-gnu/hdf5/serial" >> ~/.R/Makevars
+            echo "CPPFLAGS=-I/usr/include/hdf5/serial" >> ~/.R/Makevars
           fi
 
       - uses: r-lib/actions/setup-r-dependencies@v2
