--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -37,12 +37,11 @@ jobs:
             sudo apt-get update
             sudo apt-get install -y libomp-dev libhdf5-dev
             find /usr /usr/local -name "libomp.so"
-            ls /usr/include/omp.h       # Header
-            ls /usr/lib/x86_64-linux-gnu/libomp.so  # Library
+            h5cc -showconfig
             mkdir -p ~/.R
             touch ~/.R/Makevars
             echo "CXXFLAGS=-I/usr/include/hdf5/serial" >> ~/.R/Makevars
-            echo "LDFLAGS=-L/usr/lib/x86_64-linux-gnu/ -L/usr/lib/x86_64-linux-gnu/hdf5/serial" >> ~/.R/Makevars
+            echo "LDFLAGS=-L/usr/lib/llvm-14/lib -L/usr/lib/x86_64-linux-gnu/ -L/usr/lib/x86_64-linux-gnu/hdf5/serial" >> ~/.R/Makevars
             echo "CPPFLAGS=-I/usr/include/hdf5/serial" >> ~/.R/Makevars
           fi
           
