--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -35,7 +35,7 @@ jobs:
             brew install libomp hdf5
           elif [[ "$(expr substr $(uname -s) 1 5)" == "Linux" ]]; then
             sudo apt-get update
-            sudo apt-get install -y libomp-dev libhdf5-dev
+            sudo apt-get install -y libomp-dev libhdf5-serial-dev
             mkdir -p ~/.R
             touch ~/.R/Makevars
             echo "CXXFLAGS=-I/usr/include/hdf5/serial" >> ~/.R/Makevars
