--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -36,7 +36,7 @@ jobs:
           elif [[ "$(expr substr $(uname -s) 1 5)" == "Linux" ]]; then
             sudo apt-get update
             sudo apt-get install -y libhdf5-serial-dev
-            find /usr/include/hdf5/serial -name '*.h' -exec ln -s {} /usr/include/ \;
+            find /usr/include/hdf5/serial -name '*.h' -exec ln -s {} /usr/local/include/ \;
             find /usr /opt -name "H5Ppublic.h"
           else
             choco install hdf5 --version=1.12.2
