--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -39,6 +39,7 @@ jobs:
             mkdir -p ~/.R
             touch ~/.R/Makevars
             echo "CPPFLAGS=-I/usr/include/hdf5/serial" >> ~/.R/Makevars
+            echo "LDFLAGS=-L/usr/lib/llvm-14/lib" >> ~/.R/Makevars
           else
             choco install hdf5 --version=1.12.2
             mkdir -p ~/.R
