--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ LinkingTo:
     BH,
     Rcpp,
     RcppEigen,
+    Rhdf5lib,
     testthat
 Imports: 
     dplyr,
@@ -39,3 +40,5 @@ VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
 LazyData: true
+biocViews:
+
