--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,7 @@ Suggests:
     testthat (>= 3.0.0),
     xml2
 Config/testthat/edition: 3
-SystemRequirements: HDF5 (>= 1.14.5)
+SystemRequirements: GNU make
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
